crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@show_node_types.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [label, definition]
pattern: none
pipeline:
  - Catalog(op=ShowNodeTypes)
