crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@start_transaction.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: []
pattern: none
pipeline:
  - Tx(op=Start)
